syntax = "proto3";

package api.v1;

import "google/protobuf/timestamp.proto";

option go_package = "ai-reviewer/gen/api/v1;apiv1";

enum ReviewStatus {
  REVIEW_STATUS_UNSPECIFIED = 0;
  REVIEW_STATUS_PENDING = 1;
  REVIEW_STATUS_RUNNING = 2;
  REVIEW_STATUS_COMPLETED = 3;
  REVIEW_STATUS_FAILED = 4;
}

message ReviewComment {
  string id = 1;
  string review_run_id = 2;
  string file_path = 3;
  int32 line_start = 4;
  int32 line_end = 5;
  string body = 6;
}

message ReviewRun {
  string id = 1;
  string repo_id = 2;
  int64 mr_number = 3;
  ReviewStatus status = 4;
  repeated ReviewComment comments = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message TriggerReviewRequest {
  string repo_id = 1;
  int64 mr_number = 2;
}

message TriggerReviewResponse {
  ReviewRun review_run = 1;
}

message GetReviewRunRequest {
  string id = 1;
}

message GetReviewRunResponse {
  ReviewRun review_run = 1;
}

service ReviewService {
  rpc TriggerReview(TriggerReviewRequest) returns (TriggerReviewResponse);
  rpc GetReviewRun(GetReviewRunRequest) returns (GetReviewRunResponse);
}
